// Vitest Snapshot v1

exports[`BackTop > :props > fixed 1`] = `
<div
  class="t-back-top t-is-fixed t-back-top--round"
>
  <svg
    class="t-icon t-icon-backtop"
    fill="none"
    height="1em"
    viewBox="0 0 16 16"
    width="1em"
  >
    <path
      d="M2 3h12V2H2v1zM3.38 10.23l4.1-4.03v8.64H8.5V6.2l4.18 4.08.71-.7-5.05-4.93a.5.5 0 00-.7 0l-4.98 4.9.72.69z"
      fill="currentColor"
      fill-opacity="0.9"
    />
  </svg>
  <span
    class="t-back-top__text"
  >
    返回
  </span>
</div>
`;

exports[`BackTop > :props > icon 1`] = `
<div
  class="t-back-top t-is-fixed t-back-top--round"
>
  <div>
    text
  </div>
  <!--v-if-->
</div>
`;

exports[`BackTop > :props > icon 2`] = `
<div
  class="t-back-top t-is-fixed t-back-top--round"
>
  <svg
    class="t-icon t-icon-backtop"
    fill="none"
    height="1em"
    viewBox="0 0 16 16"
    width="1em"
  >
    <path
      d="M2 3h12V2H2v1zM3.38 10.23l4.1-4.03v8.64H8.5V6.2l4.18 4.08.71-.7-5.05-4.93a.5.5 0 00-.7 0l-4.98 4.9.72.69z"
      fill="currentColor"
      fill-opacity="0.9"
    />
  </svg>
  <!--v-if-->
</div>
`;

exports[`BackTop > :props > target 1`] = `
<div
  class="t-back-top t-is-fixed t-back-top--round"
>
  <svg
    class="t-icon t-icon-backtop"
    fill="none"
    height="1em"
    viewBox="0 0 16 16"
    width="1em"
  >
    <path
      d="M2 3h12V2H2v1zM3.38 10.23l4.1-4.03v8.64H8.5V6.2l4.18 4.08.71-.7-5.05-4.93a.5.5 0 00-.7 0l-4.98 4.9.72.69z"
      fill="currentColor"
      fill-opacity="0.9"
    />
  </svg>
  <span
    class="t-back-top__text"
  >
    返回
  </span>
</div>
`;

exports[`BackTop > :props > theme 1`] = `
<div
  class="t-back-top t-is-fixed t-back-top--round"
>
  <svg
    class="t-icon t-icon-backtop"
    fill="none"
    height="1em"
    viewBox="0 0 16 16"
    width="1em"
  >
    <path
      d="M2 3h12V2H2v1zM3.38 10.23l4.1-4.03v8.64H8.5V6.2l4.18 4.08.71-.7-5.05-4.93a.5.5 0 00-.7 0l-4.98 4.9.72.69z"
      fill="currentColor"
      fill-opacity="0.9"
    />
  </svg>
  <span
    class="t-back-top__text"
  >
    返回
  </span>
</div>
`;

exports[`BackTop > :props > theme 2`] = `
<div
  class="t-back-top t-is-fixed t-back-top--half-round"
>
  <svg
    class="t-icon t-icon-backtop"
    fill="none"
    height="1em"
    viewBox="0 0 16 16"
    width="1em"
  >
    <path
      d="M2 3h12V2H2v1zM3.38 10.23l4.1-4.03v8.64H8.5V6.2l4.18 4.08.71-.7-5.05-4.93a.5.5 0 00-.7 0l-4.98 4.9.72.69z"
      fill="currentColor"
      fill-opacity="0.9"
    />
  </svg>
  <span
    class="t-back-top__text"
  >
    返回
  </span>
</div>
`;

exports[`BackTop > :props > theme 3`] = `
<div
  class="t-back-top t-is-fixed t-back-top--round-dark"
>
  <svg
    class="t-icon t-icon-backtop"
    fill="none"
    height="1em"
    viewBox="0 0 16 16"
    width="1em"
  >
    <path
      d="M2 3h12V2H2v1zM3.38 10.23l4.1-4.03v8.64H8.5V6.2l4.18 4.08.71-.7-5.05-4.93a.5.5 0 00-.7 0l-4.98 4.9.72.69z"
      fill="currentColor"
      fill-opacity="0.9"
    />
  </svg>
  <span
    class="t-back-top__text"
  >
    返回
  </span>
</div>
`;

exports[`BackTop > :props > theme 4`] = `
<div
  class="t-back-top t-is-fixed t-back-top--half-round-dark"
>
  <svg
    class="t-icon t-icon-backtop"
    fill="none"
    height="1em"
    viewBox="0 0 16 16"
    width="1em"
  >
    <path
      d="M2 3h12V2H2v1zM3.38 10.23l4.1-4.03v8.64H8.5V6.2l4.18 4.08.71-.7-5.05-4.93a.5.5 0 00-.7 0l-4.98 4.9.72.69z"
      fill="currentColor"
      fill-opacity="0.9"
    />
  </svg>
  <span
    class="t-back-top__text"
  >
    返回
  </span>
</div>
`;
